# HaskellWorkshop

./: CallC.yaml  ChangeLog.md  Concurrency.yaml  Database.yaml  Dockerfile  HaskellWorkshop.cabal  HaskellWorkshop.hs  InputOutput.hs  InputOutput.yaml  LICENSE  README.md  SimpleData.yaml  Strings.yaml  Unit.hs  Unit.yaml  VowelsExtra.hs
app-server/: Main.hs
res/: CallC.hs  CallC.yaml  Concurrency.hs  Database.hs  Database.yaml  InputOutput.yaml  Lists.hs  Lists.yaml  LocalState.hs  LocalState.yaml  Maybe.hs  Recursion.hs  Recursion.yaml  Request.hs  Request.yaml  Server.hs  Server.yaml  SimpleData.hs  SimpleTypes.hs  SimpleTypes.yaml  Strings.hs  TypeClasses.hs  TypeClasses.yaml  Unit.yaml  Vowels.hs  Vowels.yaml
src/HaskellWorkshop/: App.hs  Lecture.hs  Rendering.hs  Resources.hs  Types.hs  Util.hs
