name:                HaskellWorkshop
version:             0.1.0.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              Gabriel Garcia
maintainer:          gabriel@garciat.com
-- copyright:
category:            Learning
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable HaskellWorkshopWeb
  default-language:     Haskell2010
  hs-source-dirs:       app-server
  main-is:              Main.hs
  build-depends:        base
                      , HaskellWorkshop
                      , warp

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  build-depends:        base >= 4.8 && < 6
                      , bytestring
                      , containers
                      , directory
                      , text
                      , yaml
                      , wai
                      , http-types
                      , blaze-html
                      , markdown
                      , regex-posix
                      , filepath

  Exposed-Modules:      HaskellWorkshop.App
                      , HaskellWorkshop.Lecture
                      , HaskellWorkshop.Rendering
                      , HaskellWorkshop.Resources
                      , HaskellWorkshop.Types
                      , HaskellWorkshop.Util
